--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 
 
-
 /* 
 	Global Styling 
 	===
@@ -11,7 +10,8 @@ body{
 	font-family: "Lora", serif;
 }
 
-h1,h2,h5 {
+
+h1,h3,h5 {
 	font-family: "Oswald", sans-serif;
 }
 
@@ -22,11 +22,16 @@ h1,h2,h5 {
 	- Use this styling
 */	
 nav li{
-	float:left;
+	float: left;
 	list-style: none;
-	margin: 0 100px;
-	
-	
+	margin: 0 10px;
+}
+
+nav a:link, 
+nav a:visited {
+	background: rgba(255,255,255,.25);
+	color: #fff;
+	display: block;
 	letter-spacing: 2px;
 	padding: 20px 20px 20px 40px;
 	text-decoration: none;
@@ -40,11 +45,37 @@ nav a:hover {
 	background: #FF8000;
 }
 */
+nav a:active {
+	color: #000;
+}
 
+a#grid:hover {
+	background: url("../img/icons/award.png") #FF8000 no-repeat left center;
+}
+
+ a#wiki:hover {
+	background: url("../img/icons/grid.png") #FF8000 no-repeat left center;
+}
+
+ a#info:hover {
+	background: url("../img/icons/heart.png") #FF8000 no-repeat left center;
+}
 
 /* 
 	Feature Image
 	===
 */
 
+article img {
+	background: #000;
+	box-shadow: 2px 2px 8px black;
+	padding: 10px;
+	border: 10px solid #fff; 
+	float: right;
+	margin: 0 0 0 10px;
+}
+
+article img:hover{
+	border: 10px solid orange;
+}
 
